base-apps/donetick/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: donetick
  namespace: donetick
  labels:
    app: donetick
    app.kubernetes.io/name: donetick
spec:
  type: ClusterIP
  ports:
    - port: 2021
      targetPort: 2021
      protocol: TCP
      name: http
  selector:
    app: donetick
