base-apps/donetick/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: donetick
  namespace: donetick
spec:
  parentRefs:
    - name: main
      namespace: istio-ingress
      sectionName: https-chores
  hostnames:
    - chores.arigsela.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: donetick
          port: 2021
